Removed autofocus (needs work) and fixed new hint highlighting being removed on candidate select and font increase on mobile

--- a/sudoku-client/src/App.css
+++ b/sudoku-client/src/App.css
@@ -135,7 +135,7 @@ input:focus.cell{
   }
 
   input.cell {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
   }
 
   .candidates {
